$Id$

0.7.0beta
	- changed DBI (DBD::Pg) as default database access method
	  (use --with-Pg option when running configure to use Pg)
	- user can now be member of more than one user group
	- database format changes (1.1):
	    - lastlog: changed host from CHAR(40) --> TEXT
	    - hosts: added new columns: vmps, dhcp_last
	    - users: removed column 'gid' (group memberships are treated
	             now as with any other priviliges)
	    - utmp: removed obsolete column 'gid'
	    - new table 'vmps'
	    - vlans: new column 'vlanno'
0.6.2
	- fixed dates displayed (month was off by one) by last command
	  and lastlog display in web-interface
	- fixed bug when copying reverse zones that left wrong
	  value in reversenet field
	- new user privileges:
	  - templatemask & groupmask for granting userss access to 
	    greate & modify templates/groups with names matching to a 
	    regular expression
	  - deletemask for granting users privilige to only remove hosts 
	    that match a regular expression
	  - reqhostfield for fine tuning what fields in host add/edit
	    forms are mandatory and which are optional
	- new command: update-hosts to update hosts info from a CSV file
	- custom zone file entries can be specified for each master
	  zone, these lines will appear "as is" at the end of generated 
	  zone file
	- preliminary support for DBI (DBD:Pg), use --with-DBI option
	  when running configure to enable or simply change the DB.pm
	  link to point appropriate module (DB-Pg.pm or DB-DBI.pm)
	- fixes to zone file parsing code (UtilZone.pm)
	- configuration file directory is now patched into Sauron.pm
	  during install
	- removed (unnesessary) dependency on "warnings" module
	
0.6.1	
	- sauron: not anymore generating "broken" aliases to expired
	  hosts (if a host has expired aliases are now considered expired too)
	- added new utility remove-hosts that removes hosts based on
	  list of IPs or MACs read from a file